--- a/biblioteca/views/views.xml
+++ b/biblioteca/views/views.xml
@@ -2,8 +2,8 @@
   <data>
     <!-- explicit list view definition -->
 
-    <record model="ir.ui.view" id="biblioteca.list">
-      <field name="name">biblioteca list</field>
+    <record model="ir.ui.view" id="biblioteca_libro_list">
+      <field name="name">biblioteca libro list</field>
       <field name="model">biblioteca.libro</field>
       <field name="arch" type="xml">
         <list>
@@ -17,7 +17,7 @@
 
     <!-- actions opening views on models -->
 
-    <record model="ir.actions.act_window" id="biblioteca_libro.action_window">
+    <record model="ir.actions.act_window" id="biblioteca_libro_action_window">
       <field name="name">biblioteca.libro window</field>
       <field name="res_model">biblioteca.libro</field>
       <field name="view_mode">list,form</field>
@@ -26,8 +26,8 @@
 
     <!-- server action to the one above -->
 
-    <record model="ir.actions.server" id="biblioteca.action_server">
-      <field name="name">biblioteca server</field>
+    <record model="ir.actions.server" id="biblioteca_action_server">
+      <field name="name">biblioteca libro server</field>
       <field name="model_id" ref="model_biblioteca_libro"/>
       <field name="state">code</field>
       <field name="code">
@@ -42,8 +42,8 @@
 
     <!-- Top menu item -->
 
-    <menuitem name="biblioteca" id="menu_root_biblioteca"/>
-    <menuitem name="Libro" id="biblioteca_libro_menu" parent="menu_root_biblioteca" action=biblioteca_libro.action_window/>
+    <menuitem name="biblioteca" id="biblioteca.menu_root"/>
+    <menuitem name="Libro" id="biblioteca_libro_menu" parent="biblioteca.menu_root" action="biblioteca_libro_action_window"/>
 
     <!-- menu categories -->
 
@@ -53,9 +53,9 @@
     <!-- actions -->
 
     <menuitem name="List" id="biblioteca.menu_1_list" parent="biblioteca.menu_1"
-              action="biblioteca.action_window"/>
+              action="biblioteca_libro_action_window"/>
     <menuitem name="Server to list" id="biblioteca" parent="biblioteca.menu_2"
-              action="biblioteca.action_server"/>
+              action="biblioteca_libro_action_window"/>
 
   </data>
 </odoo>
