--- a/views/views.xml
+++ b/views/views.xml
@@ -10,6 +10,11 @@
           <field name="firstname"/>
           <field name="value"/>
           <field name="value2"/>
+          <field name="publication_date"/>
+          <field name="isbn"/>
+          <field name="n_paginas"/>
+          <field name="genero"/>
+          <field name="estado"/>
         </list>
       </field>
     </record>
@@ -24,6 +29,11 @@
           <field name="value"/>
           <field name="value2"/>
           <field name="description"/>
+          <field name="publication_date"/>
+          <field name="isbn"/>
+          <field name="n_paginas"/>
+          <field name="genero"/>
+          <field name="estado"/>
         </group>
         </form>
       </field>
@@ -36,6 +46,7 @@
         <list>
           <field name="firstname"/>
           <field name="lastname"/>
+        <!--   <field name="autor_id"/> --> 
         </list>
       </field>
     </record>
@@ -48,12 +59,33 @@
         <group>
           <field name="firstname"/>
           <field name="lastname"/>
+         <!-- <field name="autor_id"/> -->
         </group>
         </form>
       </field>
     </record>
 
-   
+   <record model="ir.ui.view" id="biblioteca_editorial_list">
+      <field name="name">biblioteca editorial list</field>
+      <field name="model">biblioteca.editorial</field>
+      <field name="arch" type="xml">
+        <list>
+          <field name="firstname"/>
+        </list>
+      </field>
+    </record>
+
+    <record model="ir.ui.view" id="biblioteca_editorial_form">
+      <field name="name">biblioteca editorial form</field>
+      <field name="model">biblioteca.editorial</field>
+      <field name="arch" type="xml">
+        <form>
+        <group>
+          <field name="firstname"/>
+        </group>
+        </form>
+      </field>
+    </record>
 
     <!-- actions opening views on models -->
 
@@ -67,6 +99,12 @@
     <record model="ir.actions.act_window" id="biblioteca_autor_action_window">
       <field name="name">biblioteca autor window</field>
       <field name="res_model">biblioteca.autor</field>
+      <field name="view_mode">list,form</field>
+    </record>
+
+    <record model="ir.actions.act_window" id="biblioteca_editorial_action_window">
+      <field name="name">biblioteca editorial window</field>
+      <field name="res_model">biblioteca.editorial</field>
       <field name="view_mode">list,form</field>
     </record>
 
@@ -93,14 +131,20 @@
 
     <menuitem name="Libro menu" 
     id="biblioteca.libro" 
-    parent="biblioteca.biblioteca_menu"
+    parent="biblioteca_menu"
     action="biblioteca_libro_action_window"
     />
 
     <menuitem name="Autor menu" 
     id="biblioteca.autor" 
-    parent="biblioteca.biblioteca_menu"
+    parent="biblioteca_menu"
     action="biblioteca_autor_action_window"
+    />
+
+    <menuitem name="Editorial menu" 
+    id="biblioteca.editorial" 
+    parent="biblioteca_menu"
+    action="biblioteca_editorial_action_window"
     />
 
     <!-- menu categories -->
